organizes and cleanups code.

--- a/webui.html
+++ b/webui.html
@@ -143,7 +143,7 @@
                         <strong><span id="pct"></span></strong>
                     </div>
                     <div class="col-xs-2" style="text-align: right;">
-                        <button type="button" onclick="emergency_p()" class="btn btn-outline-light" title="EMERGENCY STOP!!!" style="background-color: transparent;">
+                        <button type="button" id="eStop" class="btn btn-outline-light" title="EMERGENCY STOP!!!" style="background-color: transparent;">
                             <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="red" class="bi bi-sign-stop" viewBox="0 0 16 16">
                                 <path d="M3.16 10.08c-.931 0-1.447-.493-1.494-1.132h.653c.065.346.396.583.891.583.524 0 .83-.246.83-.62 0-.303-.203-.467-.637-.572l-.656-.164c-.61-.147-.978-.51-.978-1.078 0-.706.597-1.184 1.444-1.184.853 0 1.386.475 1.436 1.087h-.645c-.064-.32-.352-.542-.797-.542-.472 0-.77.246-.77.6 0 .261.196.437.553.522l.654.161c.673.164 1.06.487 1.06 1.11 0 .736-.574 1.228-1.544 1.228Zm3.427-3.51V10h-.665V6.57H4.753V6h3.006v.568H6.587Z"/>
                                 <path fill-rule="evenodd" d="M11.045 7.73v.544c0 1.131-.636 1.805-1.661 1.805-1.026 0-1.664-.674-1.664-1.805V7.73c0-1.136.638-1.807 1.664-1.807s1.66.674 1.66 1.807Zm-.674.547v-.553c0-.827-.422-1.234-.987-1.234-.572 0-.99.407-.99 1.234v.553c0 .83.418 1.237.99 1.237.565 0 .987-.408.987-1.237m1.15-2.276h1.535c.82 0 1.316.55 1.316 1.292 0 .747-.501 1.289-1.321 1.289h-.865V10h-.665zm1.436 2.036c.463 0 .735-.272.735-.744s-.272-.741-.735-.741h-.774v1.485z"/>
@@ -163,10 +163,10 @@
 
                             <div class="row">
                                     <div class="col-xs-6">
-                                    <button class="btn btn-success btn-block" type="button" onclick="start_p()"><i class="fa fa-check"></i> Start Print</button>
+                                        <button class="btn btn-success btn-block" type="button" id="print"><i class="fa fa-check"></i> Start Print</button>
                                 </div>
                                     <div class="col-xs-6">
-                                    <button class="btn btn-danger btn-block" type="button" onclick="cancel_p()"><i class="fa fa-times"></i> Cancel Print</button>
+                                        <button class="btn btn-danger btn-block" type="button" id="cancel"><i class="fa fa-times"></i> Cancel Print</button>
                                 </div>
                             </div>
                             <div class="clearfix"></div>
@@ -498,11 +498,39 @@
         }
 
         $(document).ready(function() {
-            var gCodeLog = document.getElementById("gCodeLog");
             enableControls(false);
 
             updateState();
             setInterval(updateState, 1000);
+        });
+
+        $(document).ready(function() {
+
+            $('#print').click(function() {
+                sendCode("M565");
+            });
+
+            $('#cancel').click(function() {
+                sendCommand('{P:X}');
+            });
+
+            $('#eStop').click(function() {
+                sendCode("M112\nM999", null, function () {
+                    alert('Emergency Stop Sent! You will have to cycle power on the printer to get communications back up.');
+                });
+            });
+
+            $('#sendRAWgCode').click(function() {
+                var gCode2Send = $('#gcode').val();
+                if (gCode2Send == '') {
+                    alert("You didn't enter anything!");
+                    return;
+                }
+
+                sendCode(gCode2Send, function() {
+                    $('#gcode').val('');
+                }, null);
+            });
 
             $("#sete").click(function() {
                 var value = pad($("#wre").val(), 3);
@@ -522,6 +550,7 @@
                 sendCommand("{C:P000}");
             });
         });
+
         String.prototype.contains = function(it) {
             return this.indexOf(it) != -1;
         };
@@ -566,32 +595,6 @@
                 });
             }
         };
-
-        function start_p() {
-            sendCode("M565");
-        }
-
-        function cancel_p() {
-            sendCommand('{P:X}');
-        }
-
-        function emergency_p() {
-            sendCode("M112\nM999", null, function () {
-                alert('Emergency Stop Sent! You will have to cycle power on the printer to get communications back up.');
-            });
-        }
-
-        $('#sendRAWgCode').click(function() {
-            var gCode2Send = $('#gcode').val();
-            if (gCode2Send == '') {
-                alert("You didn't enter anything!");
-                return;
-            }
-
-            sendCode(gCode2Send, function() {
-                $('#gcode').val('');
-            }, null);
-        });
 
         function setFan($fSpeed) {
             sendCode("M106 S" + $fSpeed);
@@ -776,16 +779,6 @@
 
                 var tempChart = $("#tempChart");
                 var tempChart2 = $("#tempChart2");
-
-                // add zoom out button 
-                $("<div class=\"btn btn-default\" style=\"display: block; width: 40px; float: right; position: relative; top: 10px; right: 10px;\"><i class=\"fa fa-search-minus\"></i></div>").appendTo(tempChart).click(function(event) {
-                    event.preventDefault();
-                    plot.zoomOut();
-                });
-                $("<div class=\"btn btn-default\" style=\"display: block; width: 40px; float: right; position: relative; top: 10px; right: 10px;\"><i class=\"fa fa-search-minus\"></i></div>").appendTo(tempChart2).click(function(event) {
-                    event.preventDefault();
-                    plot2.zoomOut();
-                });
 
                 function update() {
                     plot.setData([getData()]);
